added working pairMethod

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 
     <div class="buttons">
       <button class="button buttonReset" id="reset" type="button" value="reset" onclick="resetFunction();">Reset</button>
-      <button class="button crossMethod" id="cross" type="button" value="cross" onclick="crossMethod();">CrossMethod</button>
-      <button class="button lineMethod" id="line" type="button" value="line" onclick="lineMethod();">LineMethod</button>
-      <button class="button oneSmallNum" id="line" type="button" value="smal" onclick="oneSmallNum();">smallNum</button>
+      <button class="button crossMethod" id="cross" type="button" value="cross" onclick="crossMethod();">Crossmethod</button>
+      <button class="button lineMethod" id="line" type="button" value="line" onclick="lineMethod();">Linemethod</button>
+      <button class="button oneSmallNum" id="line" type="button" value="smal" onclick="oneSmallNum();">Smallnum</button>
+      <button class="button pairMethod" id="line" type="button" value="pair" onclick="pairMethod();">Pairmethod</button>
     </div>
 
     <script src="arrayOpt.js"></script>
