Improved bruteforce method

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 <option value="1">Easy</option>
 <option value="2">Medium</option>
 <option value="3">Hard</option>
+<option value="4">Anti-backtrack</option>
+<option value="5">Arto Inkala</option>
+
 </select>
 
 
