Added hiddenPairs method

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <button class="button lineMethod" id="line" type="button" value="line" onclick="lineMethod();">Linemethod</button>
       <button class="button oneSmallNum" id="smal" type="button" value="smal" onclick="oneSmallNum();">Smallnum</button>
       <button class="button pairMethod" id="pair" type="button" value="pair" onclick="pairMethod();">Pairmethod</button>
+      <button class="button hiddenPairs" id="pair2" type="button" value="pair2" onclick="hiddenPairs();">Hidden pairs</button>
       <button class="button bruteMethod" id="brute" type="button" value="brute" onclick="bruteMethod();">Brutemethod</button>
     </div>
 
